tried to fix spacing/text wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ body{
 }
 
 #p1 {
-	padding-top: 20px;
+	padding-top: 25px;
 /*	border: solid black 1px; */
 }
 
@@ -168,7 +168,7 @@ body{
 
 }
 #p2 {
-	padding-top: 10%;
+	padding-top: 14%;
 /*	border: solid black 1px; */
 }
 
